Bugfix: fix widgets alignment consistency (#1083)
* widgets dimensions updated: follow up PR-#869

* removed unwanted console.log

* toggle widget minor tweaks

* Fixes the padding of dropdown & multi-select dropdown

* Minor corrections

* Fix padding of datepicker and date range picker

* Fix for toggle switch

* fix checkbox and removed duplicate classname in radio widget

* multi-select width update

* fixed widgets styles

* alignment consistency

--- a/frontend/src/_styles/widgets/star-rating.scss
+++ b/frontend/src/_styles/widgets/star-rating.scss
@@ -7,4 +7,7 @@
   .label {
     flex: 1;
   }
+  .star {
+    margin-bottom: 1px;
+  }
 }
